# gazelle-example

./: .bazeliskrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  nogo_config.json
foo/: BUILD.bazel  example.proto
foo/any_example/: BUILD.bazel  main.go
foo/example_test/: BUILD.bazel  example_test.go
foo/mock/: BUILD.bazel
myapp/: BUILD.bazel  main.go
myapp/myapp_test/: BUILD.bazel  myapp_test.go
myapp/proto/: BUILD.bazel  example.proto
myapp/proto/v1/: BUILD.bazel  example.proto
myapp/proto/v1/mock/: BUILD.bazel
