load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "myapp_lib",
    srcs = ["main.go"],
    importpath = "example.com/gazelle-example/myapp",
    visibility = ["//visibility:private"],
    deps = [
        "//myapp/proto/v1:proto",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
    ],
)

go_binary(
    name = "myapp",
    embed = [":myapp_lib"],
    visibility = ["//visibility:public"],
)
