load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@com_github_bazel_gomock//:gomock.bzl", "gomock")
# gazelle:ignore

gomock(
    name = "gen_mock",
    out = "mock_my_service_client.go",
    interfaces = ["MyServiceClient"],
    library = "//foo:example_go_proto",
    package = "mock",
    self_package = "example.com/gazelle-example/foo/mock",
)

go_library(
    name = "go_default_library",
    srcs = [
        "mock_my_service_client.go"
    ],
    importpath = "example.com/gazelle-example/foo/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//foo:example",
        "@org_golang_google_grpc//:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ] # keep
)
